主题添加并修复org-notes-style页面显示错误

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-01-16 周二 12:42 -->
+<!-- 2018-01-18 周四 16:44 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>主题样例</title>
@@ -240,13 +240,13 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org25ebf7c">1. 主题样例</a></li>
+<li><a href="#orgf3d15b5">1. 主题样例</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org25ebf7c" class="outline-2">
-<h2 id="org25ebf7c"><span class="section-number-2">1</span> 主题样例</h2>
+<div id="outline-container-orgf3d15b5" class="outline-2">
+<h2 id="orgf3d15b5"><span class="section-number-2">1</span> 主题样例</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -317,6 +317,26 @@ for the JavaScript code in this tag.
 <td class="org-left">org-nicolas</td>
 <td class="org-left"><a href="./org-nicolas/example.html">example.html</a></td>
 </tr>
+
+<tr>
+<td class="org-left">org-joshua</td>
+<td class="org-left"><a href="./org-joshua/example.html">example.html</a></td>
+</tr>
+
+<tr>
+<td class="org-left">org-norang</td>
+<td class="org-left"><a href="./org-norang/example.html">example.html</a></td>
+</tr>
+
+<tr>
+<td class="org-left">solarized-css</td>
+<td class="org-left"><a href="./solarized-css/example-dark.html">example-dark.html</a></td>
+</tr>
+
+<tr>
+<td class="org-left">solarized-css</td>
+<td class="org-left"><a href="./solarized-css/example-light.html">example-light.html</a></td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -325,7 +345,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <a class="author"
            href="https://rgb-24bit.github.io">rgb-24bit</a> / <span
-           class="date">Last Update:2018-01-16 周二 12:42</span><span class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 25.1.1 (<a href="http://orgmode.org">Org</a> mode 9.1.4)</span>
+           class="date">Last Update:2018-01-18 周四 16:44</span><span class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 25.1.1 (<a href="http://orgmode.org">Org</a> mode 9.1.4)</span>
 </div>
 </body>
 </html>
