修改链接指向

--- a/org-html-themes/example-bigblow.html
+++ b/org-html-themes/example-bigblow.html
@@ -2569,7 +2569,7 @@ to <a href="https://orgmode.org/worg/">https://orgmode.org/worg/</a> we will fac
 </div></div>
 <div id="postamble" class="status">
 <a class="author"
-           href="https://rgb-24bit.github.io">Sebastian Rose</a> / <span
+           href="">Sebastian Rose</a> / <span
            class="date">Last Update:2018-01-16 周二 11:39</span><span class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 25.1.1 (<a href="http://orgmode.org">Org</a> mode 9.1.4)</span>
 </div>
 </body>
